[gd_scene load_steps=25 format=3 uid="uid://cacmnwuabbpi6"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_i753s"]
[ext_resource type="Texture2D" uid="uid://cyttxbuhxbrly" path="res://Images/playerup_down_walk.png" id="2_xrhp6"]
[ext_resource type="Texture2D" uid="uid://thi1q6p0t5g3" path="res://Images/Revolver.png" id="3_6q2k3"]
[ext_resource type="Texture2D" uid="uid://6hfhox6ctaef" path="res://Images/ReFoxWalkSide.png" id="3_728fu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2kigu"]
atlas = ExtResource("2_xrhp6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uo46"]
atlas = ExtResource("2_xrhp6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38oqd"]
atlas = ExtResource("2_xrhp6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwkp2"]
atlas = ExtResource("2_xrhp6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2loow"]
atlas = ExtResource("2_xrhp6")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kur20"]
atlas = ExtResource("2_xrhp6")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ip21"]
atlas = ExtResource("2_xrhp6")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yef3i"]
atlas = ExtResource("3_728fu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g86ry"]
atlas = ExtResource("3_728fu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ce5d"]
atlas = ExtResource("3_728fu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eowft"]
atlas = ExtResource("3_728fu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnfa7"]
atlas = ExtResource("3_728fu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gawev"]
atlas = ExtResource("2_xrhp6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmbom"]
atlas = ExtResource("2_xrhp6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xt80"]
atlas = ExtResource("2_xrhp6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_svpfk"]
atlas = ExtResource("2_xrhp6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1icx"]
atlas = ExtResource("2_xrhp6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0xxg"]
atlas = ExtResource("2_xrhp6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kei1f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kigu")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uo46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38oqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwkp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2loow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kur20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ip21")
}],
"loop": true,
"name": &"walkNorth",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yef3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g86ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ce5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eowft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnfa7")
}],
"loop": true,
"name": &"walkSide",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gawev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmbom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xt80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svpfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1icx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0xxg")
}],
"loop": true,
"name": &"walkSouth",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_m7466"]
radius = 5.77

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(3, 3)
script = ExtResource("1_i753s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_kei1f")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_m7466")

[node name="WeaponPivot" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="GunSprite" type="Sprite2D" parent="WeaponPivot"]
z_index = 2
texture_filter = 1
position = Vector2(7.045, 0.465)
scale = Vector2(0.305, 0.305)
texture = ExtResource("3_6q2k3")
offset = Vector2(1.445, -3.73)

[node name="EndOfGun" type="Node2D" parent="WeaponPivot/GunSprite"]
position = Vector2(24.75, -11.3)
scale = Vector2(3.33333, 3.33333)

[node name="GunDirection" type="Node2D" parent="WeaponPivot/GunSprite"]
position = Vector2(28.911, -11.3)
scale = Vector2(3.33333, 3.33333)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
